# recordplan/api/internal/docs/swagger.json
@@ -6,6 +6,93 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/streams": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "媒体流"
+                ],
+                "summary": "批量删除",
+                "parameters": [
+                    {
+                        "description": "Stream 数组",
+                        "name": "stream",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/streams/{stream}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "媒体流"
+                ],
+                "summary": "删除",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Stream",
+                        "name": "stream",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/streams/{stream}/week_plans": {
             "get": {
                 "produces": [
@@ -30,7 +117,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/db.WeekPlan"
+                                "$ref": "#/definitions/weekplans.weekplan"
                             }
                         }
                     },
@@ -208,12 +295,6 @@
                             "$ref": "#/definitions/internal.Error"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -369,7 +450,7 @@
                         "required": true
                     },
                     {
-                        "description": "任务数组",
+                        "description": "媒体流数组",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -419,7 +500,7 @@
                         "required": true
                     },
                     {
-                        "description": "自定义的任务 ID 数组",
+                        "description": "自定义的媒体流 ID 数组",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -540,7 +621,7 @@
                 "stream": {
                     "description": "流的唯一标识",
                     "type": "string",
-                    "maxLength": 128
+                    "maxLength": 64
                 }
             }
         },
@@ -634,6 +715,33 @@
                     "description": "保存的天数",
                     "type": "integer",
                     "minimum": 1
+                }
+            }
+        },
+        "weekplans.weekplan": {
+            "type": "object",
+            "properties": {
+                "enable": {
+                    "description": "是否禁用\n0: 禁用\n1: 启用",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "isRecording": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "description": "名称",
+                    "type": "string"
+                },
+                "peroids": {
+                    "description": "是一个 RecordTime 的 JSON 数组",
+                    "type": "string"
+                },
+                "saveDay": {
+                    "description": "保存的天数",
+                    "type": "integer"
                 }
             }
         }
