# recordplan/api/streams/delete.go
@@ -1,4 +1,4 @@
-package weekplans
+package streams
 
 import (
 	"net/http"
@@ -10,13 +10,13 @@ import (
 )
 
 //	@Summary	删除
-//	@Tags		周计划
-//	@Param		id	path	string	true	"WeekPlan.ID"
+//	@Tags		媒体流
+//	@Param		stream	path	string	true	"Stream"
 //	@Accept		json
 //	@Success	204
 //	@Failure	400	{object}	internal.Error
 //	@Failure	500	{object}	internal.Error
-//	@Router		/week_plans/{id} [delete]
+//	@Router		/streams/{stream} [delete]
 func delete(ctx *gin.Context) {
 	// 参数
 	var id internal.IDPath[string]
@@ -26,29 +26,29 @@ func delete(ctx *gin.Context) {
 		return
 	}
 	// 数据库
-	rows, err := db.WeekPlanDA.Delete(id.ID)
+	rows, err := db.DeleteWeekPlanStreamByStream(id.ID)
 	if err != nil {
 		internal.HandleDB500(ctx, err)
 		return
 	}
 	// 更新
 	if rows > 0 {
-		week.Reload(id.ID)
+		week.DeleteStream(id.ID)
 	}
 	// 返回
 	ctx.Status(http.StatusNoContent)
 }
 
 //	@Summary	批量删除
-//	@Tags		周计划
-//	@Param		data	body	[]string	true	"条件"
+//	@Tags		媒体流
+//	@Param		stream	body	[]string	true	"Stream 数组"
 //	@Security	ApiKeyAuth
 //	@Accept		json
 //	@Produce	json
 //	@Success	204
 //	@Failure	400	{object}	internal.Error
 //	@Failure	500	{object}	internal.Error
-//	@Router		/week_plans [delete]
+//	@Router		/streams [delete]
 func batchDelete(ctx *gin.Context) {
 	// 参数
 	var req internal.BatchDelete[string]
@@ -58,7 +58,7 @@ func batchDelete(ctx *gin.Context) {
 		return
 	}
 	// 数据库
-	rows, err := db.WeekPlanDA.BatchDelete(req.ID)
+	rows, err := db.BatchDeleteWeekPlanStreamByStream(req.ID)
 	if err != nil {
 		internal.HandleDB500(ctx, err)
 		return
@@ -66,7 +66,7 @@ func batchDelete(ctx *gin.Context) {
 	// 更新
 	if rows > 0 {
 		for _, id := range req.ID {
-			week.Reload(id)
+			week.DeleteStream(id)
 		}
 	}
 	// 返回
