# recordplan/api/streams/week_plans/list.go
@@ -5,15 +5,21 @@ import (
 
 	"recordplan/api/internal"
 	"recordplan/db"
+	"recordplan/task/week"
 
 	"github.com/gin-gonic/gin"
 )
+
+type weekplan struct {
+	*db.WeekPlan
+	IsRecording bool `json:"isRecording"`
+}
 
 //	@Summary	获取周计划
 //	@Tags		媒体流
 //	@Param		stream	path	string	true	"Stream"
 //	@Produce	json
-//	@Success	200	{object}	[]db.WeekPlan
+//	@Success	200	{object}	[]weekplan
 //	@Failure	404	{object}	internal.Error
 //	@Failure	500	{object}	internal.Error
 //	@Router		/streams/{stream}/week_plans [get]
@@ -39,6 +45,11 @@ func list(ctx *gin.Context) {
 	if err != nil {
 		internal.HandleDB500(ctx, err)
 		return
+	}
+	weekplans := make([]weekplan, len(weekPlanModels))
+	for i := 0; i < len(weekplans); i++ {
+		weekplans[i].WeekPlan = weekPlanModels[i]
+		weekplans[i].IsRecording, _ = week.IsRecording(weekPlanModels[i].ID)
 	}
 	// 返回
 	ctx.JSON(http.StatusOK, weekPlanModels)
